=================================3=========================================
deleted interface from main.py from now.... focusing on functionality first
added games.ini to store game profiles, including save locations.
added changes to help me remember what I am changing.
=================================END========================================

=================================4==========================================