@@ -1,0 +1,13 @@
+#This file stores profiles of FTPs and DATABASES
+#Manipulate these to your specific use scenario
+#READ README.md to learn how and when to change these
+
+#FTP DETAILS
+[FTP]
+host = localhost
+port = 21
+user = saver
+password = saver
+dir = /
+
+[DATABASE]
