@@ -3,5 +3,5 @@
 #PLEASE DO NOT MESS WITH THIS if you do not know what you are doing!
 
 [MINECRAFT]
-path = %AppData%\Roaming\.minecraft\saves
-mods = %AppData%\Roaming\.minecraft\mods
+path = %AppData%/Roaming/.minecraft/saves
+mods = %AppData%/Roaming/.minecraft/mods
