@@ -5,3 +5,6 @@ added changes to help me remember what I am changing.
 =================================END========================================
 
 =================================4==========================================
+added backupall function to main.py (just for show for now) and also finished 
+the logic for the fin function in main.py and added some handy comments, 
+and made config.ini to store data about the ftp and the to be made database
